--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
     <h1>Hello World!</h1>
     <p>This site made with usage of GitHub Pages!</p>
   </body>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 </html>
