--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Hello World! Check ur browser!! (beta + maybe buggy)</h1>
     <p id="browser"></p>
   </body>
   <link rel="stylesheet" href="style.css"/>
