--- a/index.html
+++ b/index.html
@@ -1,28 +1,7 @@
 <html>
   <body>
-    <h1>Hello World! Check ur browser!! (beta + maybe buggy)</h1>
-    <p id="browser"></p>
+    <h1>My best projects</h1>
+    <a href="noodle.html">Noodle (мой язык программирования)</a>
   </body>
   <link rel="stylesheet" href="style.css"/>
 </html>
-
-<script>
-        function getBrowser() {
-            var userAgent = navigator.userAgent;
-            var browserName;
-
-            if (userAgent.indexOf("Chrome") > -1) {
-                browserName = "Google Chrome";
-            } else if (userAgent.indexOf("Firefox") > -1) {
-                browserName = "Mozilla Firefox";
-            } else if (userAgent.indexOf("Safari") > -1) {
-                browserName = "Apple Safari";
-            } else if (userAgent.indexOf("MSIE") > -1 || userAgent.indexOf("Trident") > -1) {
-                browserName = "Internet Explorer";
-            } else {
-                browserName = "Неизвестный браузер";
-            }
-
-            document.getElementById("browser").innerText = "Вы используете: " + browserName;
-        }
-    </script>
